task1/test_results_defects/infer_test/uninit_pointer/report.txt
#0
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/uninit_pointer.c:29: error: Uninitialized Value
  The value read from *p was never initialized.
  27. 	int *p ;  
  28. 	int ret;
  29. 	ret = *p; /*Tool should detect this line as error*/ /*ERROR:Uninitialized pointer*/
       ^
  30. }
  31. 

#1
/home/cs4239/Desktop/cs5218/NUS_CS5218_asg3/task1/01.w_Defects/uninit_pointer.c:151: error: Uninitialized Value
  The value read from ret was never initialized.
  149. {
  150. 	int ret;
  151. 	p->uninit=ret;
        ^
  152. }
  153. void uninit_pointer_008 ()

Found 2 issues
                Issue Type(ISSUED_TYPE_ID): #
  Uninitialized Value(UNINITIALIZED_VALUE): 2
